--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.888.0",
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "axios": "^1.12.1",
     "lucide-react": "^0.544.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.45.0",
     "next": "15.5.2",
+    "openai": "^5.20.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
