--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.12.1",
     "lucide-react": "^0.544.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.45.0",
