--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.12.1",
     "lucide-react": "^0.544.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.45.0",
+    "mongoose": "^8.19.1",
+    "music-metadata": "^11.9.0",
     "next": "15.5.2",
     "openai": "^5.20.3",
     "react": "19.1.0",
